# mangabook

./: .gitignore  .gitmodules  CHANGELOG.md  FIXES.md  MANIFEST.in  README.md  api_integration_summary.md  api_test.py  check_status.py  create_test_image.py  debug_epub_minimal.py  direct_epub_builder.py  download_test_findings.md  fix_epub_image_content.py  install.sh  next_test_plan.md  pyproject.toml  quick_test.py  refactoring_summary.md  requirements.txt
docs/: developer_guide.md  user_guide.md
mangabook/: __init__.py  __main__.py  api.py  auth.py  batch.py  cli.py  config.py  downloader.py  error.py  history.py  parallel.py  testing.py  ui.py  utils.py  workflow.py
mangabook/epub/: __init__.py  builder.py  enhanced_builder.py  fixed_builder.py  image.py  kobo.py
