[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mangabook"
version = "0.1.0"
description = "A tool to download manga from MangaDex and convert to Kobo-compatible EPUB"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MangaBook Contributors", email = "example@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = [
    "ebooklib>=0.17.1",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "click>=8.1.3",
    "tqdm>=4.66.1",
    "beautifulsoup4>=4.10.0",
    "aiohttp>=3.8.1",
    "colorama>=0.4.6"
]

[project.urls]
Homepage = "https://github.com/yourusername/mangabook"
BugTracker = "https://github.com/yourusername/mangabook/issues"
Documentation = "https://github.com/yourusername/mangabook#readme"

[project.scripts]
mangabook = "mangabook.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
